# grpc-go-cpp

./: CMakeLists.txt  Makefile  echo_client.cc  go.mod  main.go
.devcontainer/: Dockerfile  devcontainer.json
client/: CMakeLists.txt  echo_client.cc  service_client.cc
internal/echoserver/: server.go
pb/: echo.pb.go  echo.proto  echo_grpc.pb.go
rpc/echo/: service.pb.go  service.proto  service_grpc.pb.go
server/: main.go
